welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
  if ((isBirthday == true) && (speed >= 86)) {return 2}
  ^