welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  
  if ((isBirthday == false) && (speed <= 60)) {return 0}
  if ((isBirthday == false) && ((speed >= 61) & (speed <= 80))) {return 1}
  if ((isBirthday) && (speed >= 81)) {return 2}
  if ((isBirthday == true) && (speed <= 65)) {return 0}
  if ((isBirthday == true) && ((speed >= 66) & (speed <= 85))) {return 1}
  if ((isBirthday == true) && (speed >= 86)) {return 2}
}